--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+:root {
+    --primary-color: #979797; /* Main primary color */
+    --primary-light-color: #f3e5f5; /* Light variant of primary color */
+    --background-default: #fcf9ff; /* Default background color */
+  }
+  
+  /* Define custom scrollbar styles using theme variables */
+  ::-webkit-scrollbar {
+    width: 12px;
+    background-color: var(--background-default);
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+    border-radius: 6px;
+    border: 3px solid var(--background-default);
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-light-color);
+  }
